; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_background_worker.c_SpawnThread.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_background_worker.c_SpawnThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.background_worker = type { i32, i32, i32 }
%struct.background_thread = type { i32 }

@Thread = common dso_local global i32 0, align 4
@VLC_THREAD_PRIORITY_LOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.background_worker*)* @SpawnThread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SpawnThread(%struct.background_worker* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.background_worker*, align 8
  %4 = alloca %struct.background_thread*, align 8
  store %struct.background_worker* %0, %struct.background_worker** %3, align 8
  %5 = load %struct.background_worker*, %struct.background_worker** %3, align 8
  %6 = getelementptr inbounds %struct.background_worker, %struct.background_worker* %5, i32 0, i32 2
  %7 = call i32 @vlc_mutex_assert(i32* %6)
  %8 = load %struct.background_worker*, %struct.background_worker** %3, align 8
  %9 = call %struct.background_thread* @background_thread_Create(%struct.background_worker* %8)
  store %struct.background_thread* %9, %struct.background_thread** %4, align 8
  %10 = load %struct.background_thread*, %struct.background_thread** %4, align 8
  %11 = icmp ne %struct.background_thread* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %32

13:                                               ; preds = %1
  %14 = load i32, i32* @Thread, align 4
  %15 = load %struct.background_thread*, %struct.background_thread** %4, align 8
  %16 = load i32, i32* @VLC_THREAD_PRIORITY_LOW, align 4
  %17 = call i64 @vlc_clone_detach(i32* null, i32 %14, %struct.background_thread* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load %struct.background_thread*, %struct.background_thread** %4, align 8
  %21 = call i32 @free(%struct.background_thread* %20)
  store i32 0, i32* %2, align 4
  br label %32

22:                                               ; preds = %13
  %23 = load %struct.background_worker*, %struct.background_worker** %3, align 8
  %24 = getelementptr inbounds %struct.background_worker, %struct.background_worker* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  %27 = load %struct.background_thread*, %struct.background_thread** %4, align 8
  %28 = getelementptr inbounds %struct.background_thread, %struct.background_thread* %27, i32 0, i32 0
  %29 = load %struct.background_worker*, %struct.background_worker** %3, align 8
  %30 = getelementptr inbounds %struct.background_worker, %struct.background_worker* %29, i32 0, i32 0
  %31 = call i32 @vlc_list_append(i32* %28, i32* %30)
  store i32 1, i32* %2, align 4
  br label %32

32:                                               ; preds = %22, %19, %12
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @vlc_mutex_assert(i32*) #1

declare dso_local %struct.background_thread* @background_thread_Create(%struct.background_worker*) #1

declare dso_local i64 @vlc_clone_detach(i32*, i32, %struct.background_thread*, i32) #1

declare dso_local i32 @free(%struct.background_thread*) #1

declare dso_local i32 @vlc_list_append(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
